--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lightgray;
+    background-color: white;
 }
 
 h1 {
@@ -25,4 +25,17 @@ h2 {
     max-width: 960px;
     margin: 0 auto;
     top: 100px;
+    background-color: lightcoral;
+    border: 5px solid gold;
+    padding: 25px;
+    height: 350px;
+}
+
+#header {
+    font-family: 'Alex Brush', cursive;
+    text-align: center;
+}
+
+#start {
+    left: 450px;
 }
